[package]
name = "storm-d"
version = "0.0.1"
authors = ["Brian Taylor <brian@resolvingarchitecture.io>"]
license-file = "LICENSE"
edition = "2018"
description = "Decentralized Storm"
homepage = "https://resolvingarchitecture.io"
documentation = "https://github.com/resolvingarchitecture/storm-d"
repository = "https://github.com/resolvingarchitecture/storm-d.git"
publish = true
readme = "README.md"
keywords = ["decentralized","graph processing","real-time analytics", "apache storm"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
simple_logger = "1.6.0"

ra_common = "0.0.28"
seda_bus = "0.0.10"